fix flake8 setup

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = format, lint, python36, python37
+envlist = format, lint, python37, python38, python39
 skipsdist = True
 
 [gh-actions]
 python =
-    3.8: python36, format, lint
-    3.9: python37
+    3.7: python37
+    3.8: python38
+    3.9: python39, format, lint
 
 [testenv]
 setenv =
@@ -29,5 +30,5 @@ commands =
 deps =
     flake8
 commands =
-    flake8 src
+    flake8 --ignore=E203 --max-line-length=88 src
 
