fix flake8 setup

--- a/tox.ini
+++ b/tox.ini
@@ -30,5 +30,5 @@ commands =
 deps =
     flake8
 commands =
-    flake8 --ignore=E203 --max-line-length=88 src
+    flake8 --ignore=E203,W503,W291 --max-line-length=88 src
 
