--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist = format, lint, python36, python37, python38, python39
+envlist = format, lint, python37, python38, python39, python310
 skipsdist = True
 
 [gh-actions]
 python =
-    3.6: python36
     3.7: python37
     3.8: python38
     3.9: python39, format, lint
+    3.10: python310, format, lint
 
 [testenv]
 setenv =
