--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 python =
     3.7: python37
     3.8: python38
-    3.9: python39, format, lint
+    3.9: python39
     3.10: python310, format, lint
 
 [testenv]
@@ -15,9 +15,7 @@ setenv =
 deps =
    pytest
 commands =
-   pytest tests
-
-
+   pytest tests --basetemp={envtmpdir}
 
 [testenv:format]
 description =
@@ -33,3 +31,6 @@ deps =
 commands =
     flake8 --ignore=E203,W503,W291 --max-line-length=88 src
 
+[testenv:python37]
+basepython =
+            ../py_env/python37/python.exe
