--- a/tox copy.ini
+++ b/tox copy.ini
@@ -1,15 +1,40 @@
 [tox]
-envlist = format, lint, python36, python37
+envlist = python36, python37
 skipsdist = True
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
 deps =
    pytest
 commands =
    pytest tests
 
+[testenv:python36]
+basepython=
+        ../py_env/python36/python.exe
+
+[testenv:python37]
+basepython=
+        ../py_env/python37/python.exe
+
+
+[tox]
+envlist = format, lint, python37, python38, python39
+skipsdist = True
+
+[gh-actions]
+python =
+    3.7: python37
+    3.8: python38
+    3.9: python39, format, lint
+    3.10: python310, 
+
+[testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
+deps =
+   pytest-cov
+commands =
+   pytest --cov-report term-missing --cov=tests --basetemp={envtmpdir}
 
 [testenv:format]
 description =
@@ -23,12 +48,17 @@ commands =
 deps =
     flake8
 commands =
-    flake8 src
+    flake8 --ignore=E203,W503,W291 --max-line-length=88 src
 
-[testenv:python36]
-basepython=
-        ../py_env/python36/python.exe
 
 [testenv:python37]
-basepython=
-        ../py_env/python37/python.exe
+basepython =
+            python3.7
+
+[testenv:python38]
+basepython =
+            python3.8
+
+[testenv:python39]
+basepython =
+            python3.9
