--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,20 @@
 [tox]
-envlist = format, lint, python37, python38, python39, python310
+envlist = format, lint, python37, python38, python39
 skipsdist = True
 
 [gh-actions]
 python =
     3.7: python37
     3.8: python38
-    3.9: python39
-    3.10: python310, format, lint
+    3.9: python39, format, lint
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-   pytest
+   pytest-cov
 commands =
-   pytest tests --basetemp={envtmpdir}
+   pytest --cov-report term-missing --cov=tests --basetemp={envtmpdir}
 
 [testenv:format]
 description =
@@ -31,6 +30,15 @@ deps =
 commands =
     flake8 --ignore=E203,W503,W291 --max-line-length=88 src
 
+
 [testenv:python37]
 basepython =
-            ../py_env/python37/python.exe
+            python3.7
+
+[testenv:python38]
+basepython =
+            python3.8
+
+[testenv:python39]
+basepython =
+            python3.9
